--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^2.5.0",
-    "@truffle/hdwallet-provider": "^1.0.34"
+    "@truffle/hdwallet-provider": "^1.0.34",
+    "truffle-assertions": "^0.9.2"
   },
   "devDependencies": {},
   "scripts": {
